--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.16"
+    "@apollo/client": "^3.11.8",
+    "@tailwindcss/vite": "^4.1.16",
+    "graphql": "^16.11.0"
   }
 }
