--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "@tailwindcss/vite": "^4.1.16",
-    "graphql": "^16.11.0"
+    "graphql": "^16.11.0",
+    "html-react-parser": "^5.2.8"
   }
 }
